[package]
name = "firefly_cli"
version = "0.15.6"
rust-version = "1.91.0"
edition = "2024"
authors = ["Firefly Zero team"]
description = "CLI tool for working with Firefly Zero"
homepage = "https://fireflyzero.com/"
repository = "https://github.com/firefly-zero/firefly-cli"
license = "MIT"
keywords = ["gamedev", "firefly-zero", "cli"]
categories = [
    "command-line-utilities",
    "game-development",
    "development-tools",
    "compilers",
    "wasm",
]

[dependencies]
# Simpler error handling
anyhow = "1.0.100"
# Get current date and time
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
# Framework for parsing CLI args
clap = { version = "4.5.54", features = ["derive"] }
# Detect message boundaries in serial port output from device
cobs = "0.5.0"
# Generate PNG images (sign chunks)
crc32fast = "1.5.0"
# TUI for the "monitor" command, colored terminal output
crossterm = "0.29.0"
# Find the best place to sotre the VFS
directories = "6.0.0"
# Serialize app config into meta file in the ROM
firefly-types = { version = "0.7.1" }
# Read gz archives (to install emulator).
flate2 = "1.1.5"
# Decode wav files
hound = "3.5.1"
# Parse PNG images
image = { version = "0.25.6", default-features = false, features = ["png"] }
# Generate PNG images (compress frame)
libflate = "2.2.1"
# Random device name generation
# NOTE: Cannot be updated to 0.9.0+ until rsa is updated to 0.10.0+.
rand = "0.9.2"
rust-embed = { version = "8.9.0", default-features = false, features = [
    "debug-embed",
] }
# REPL
rustyline = "17.0.2"
# Deserialize firefly.toml (required by `toml`)
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
# Deserialize JSON API responses from the firefly catalog
serde_json = "1.0.149"
# Communicating with running device
serialport = "4.8.1"
# Calculate file checksum
sha2 = "0.10.9"
# Read gz archives (to install emulator).
tar = "0.4.44"
# Deserialize firefly.toml
toml = "0.9.8"
# Download remote files (`url` field in `firefly.toml`)
ureq = "3.1.4"
# Build together post-processed wasm binaries
wasm-encoder = "0.244.0"
# Parse wasm binaries for post-processing (removing custom sections)
wasmparser = "0.244.0"
# Work with zip archives (distribution format for ROMs)
zip = { version = "7.0.0", default-features = false, features = ["zstd"] }
